# konsone

./: .gitignore  Cargo.toml  README.md
keymap/: Cargo.toml  ch.banst.keymap.plist
keymap/src/: main.rs
keymap/src/store/: mod.rs
src/: corpus.rs  lib.rs  main.rs  store.rs  tribuf.rs
