[package]
name = "konsone"
description = "Generates a custom keyboard layout for based on your typing habits."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
rdev = { version = "0.5.3", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5.0"

[package.metadata.bundle]
identifier = "ch.banst.keymap"
category = "public.app-category.developer-tools"

