[package]
name = "keymap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
rdev = { version = "0.5.3", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5.0"
